aspnet-gke-istio/HelloWorldAspNetCore/bin/Release/netcoreapp3.0/publish/aspnetcore-virtualservice-fault-abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aspnetcore-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - aspnetcore-gateway
  http:
  - fault:
      abort:
        percent: 50
        httpStatus: 400
    route:
    - destination:
        host: aspnetcore-service
        subset: v1
