aspnet-gke-istio/HelloWorldAspNetCore/bin/Release/netcoreapp3.0/publish/aspnetcore-virtualservice-fault-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aspnetcore-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - aspnetcore-gateway
  http:
  - fault:
      delay:
        fixedDelay: 5s
        percent: 100
    route:
    - destination:
        host: aspnetcore-service
        subset: v1
